# open_amp_build_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hello_world.c  stm32mp1xx_it.c  utc-m4.cmake
openamp/: CMakeLists.txt  ipcc.c  printf.cpp  rpmsg.cpp  rpmsg.hpp.orig
virtual_driver/: virt_uart.c  virt_uart.h
